--- a/src/ContractorMgrt.Wpf/Views/FriendDetailView.xaml
+++ b/src/ContractorMgrt.Wpf/Views/FriendDetailView.xaml
@@ -21,6 +21,7 @@
             <RowDefinition />
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+       
         <Label Content="Firstname" Margin="10 10 10 0"/>
         <TextBox Grid.Row="1" Name="FirstName"  Margin="10 0 10 10"/>
 
@@ -29,5 +30,30 @@
 
         <Label Grid.Row="4" Content="Email" Margin="10 0"/>
         <TextBox Grid.Row="5" Name="Email" Margin="10 0 10 10"/>
+        <DockPanel Grid.Row="8" Margin="10">
+            <StackPanel DockPanel.Dock="Right">
+                <Button Content="Add" Width="125"  Margin="10"
+                Command="{Binding AddPhoneNumberCommand}"/>
+                <Button Content="Remove" Width="125"  Margin="10"
+                Command="{Binding RemovePhoneNumberCommand}"/>
+            </StackPanel>
+            <DataGrid ItemsSource="{Binding PhoneNumbers}" 
+                SelectedItem="{Binding SelectedPhoneNumber,Mode=TwoWay}"
+                AutoGenerateColumns="False" RowHeaderWidth="0">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Phone Numbers" Width="*"
+             ElementStyle="{StaticResource DataGridColumnStyle}"
+             EditingElementStyle="{StaticResource DataGridEditingColumnStyle}"
+             Binding="{Binding Number,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </DockPanel>
+
+        <StackPanel Grid.Row="9" Orientation="Horizontal">
+            <Button Content="Save" Width="125" Margin="10"
+              Command="{Binding SaveCommand}"/>
+            <Button Content="Delete" Width="125"  Margin="10"
+              Command="{Binding DeleteCommand}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
